# scripts

./: .gitignore  README.md  b64.c  backdoor.c  basic-calculator.c  basic-calculator.ll  lolcat.c  pirate_bay_search.py  pyproject.toml  randomize_mac.sh  text2pdf.c  trie.c  unicode.py
HyperSudokuSolver/: .gitignore  HyperSudoku.py  HyperSudoku_2.py  README.md  Test.py
argparse-c/: Makefile  README.md
argparse-c/src/: argparse.c  argparse.h
argparse-c/tests/: main.c
c-course/: base16_explanation_scene.py  boilerplate_scene.py  compiler_scene.py  do_while_loop_scene.py  for_loop_scene.py  if-else-if_scene.py  linked_list_scene.py  memory_model_scene.py  pyproject.toml  slides.py  utils.py  while_loop_scene.py
c-course/examples/: boilerplate.c  guard_statement_example.c  hello_world.c  memory_model.c  pointers.c  variable.c  variable_scope.c
c-dsa/: CMakeLists.txt  compile.sh
c-dsa/array/: array.c  array.h
c-dsa/heap/: heap.c  heap.h
c-dsa/map/: map.c  map.h  test_map.c
c-json-parser/: .gitignore  Makefile  mem.c  parser.h
cmd-parser/: parser.c
coconut/: Makefile  coconut  coconut.c  coconut.h
coconut/buffer/: buffer.c  buffer.h
coconut/cursor/: cursor.c
coconut/editor/: editor.c  editor.h
coconut/graphics/: graphics.c  graphics.h
coconut/io/: io.c  io.h
coconut/signal/: signal.c  signal.h
coconut/term/: term.c  term.h
cs50/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  format.sh
cs50/src/labs/inheritance/: inheritance.c
cs50/src/labs/scrabble/: scrabble.c
cs50/src/labs/songs/: 4.sql  6.sql  7.sql
cs50/src/labs/volume/: volume.c
cs50/src/psets/bulbs/: bulbs.c
cs50/src/psets/caesar/: caesar.c
cs50/src/psets/credit/: credit.c
cs50/src/psets/fiftyville/: log.sql
cs50/src/psets/filter-more/: filter.c  helpers.c
cs50/src/psets/mario/: mario.c
cs50/src/psets/readability/: readability.c
cs50/src/psets/recover/: recover.c  temp.c
cs50/src/psets/speller/: dictionary.c  speller.c
cs50/src/psets/substitution/: substitution.c
cs50/src/psets/tideman/: tideman.c
cs50/src/psets/wordle/: wordle.c
hamming_code/: README.md  hamming.py
leetcode/: Kdtree.py  amazonoa.py  bevel.py  burst-balloon.py  closest-pair.py  closest_palindrome.py  coinbase.txt  distrib_coin_in_bin_tree.py  divisibleStrings.py  fft.py  format.sh  google.py  knapsack_tabular.py  kosarajus.py  kwindow_median.py  largest_square.py  lcs.py  letter_tiles.py  longest_subseq.py  mat_blk_sum.py  max_dist_to_closest_person.py  max_rect_hist.py  max_turb_array.py  maxflow.py  min_incr.py  min_paren_removal.py  nqueens.py  number_of_islands.py  oppositeSums.py  part_label.py  pq.py  pqueue.py  recallai.py  reducing_dishes.py  remove_dupe_letter.py  scc.py  self_dividing_numbers.py  square_sorted_array.py  stone_game_III.py  string-compression-ii.py  (+4 more)
leetcode/google_foobar_practice/: lv1.py  lv2.py  lv3.py
leetcode/googlefoobar/: challenge1.py  challenge2.py
leetcode/veeva/: .project  combined.csv
lolc/: README.md  lolcat.c
mesh-projection/: main.py  pyproject.toml
network-tools/: scan.py
pm/: .gitignore  Makefile  daemon.c  log.c  monitor.c  pm.c  pm.h  process.c  utils.c
png-reader/: .gitignore  README.md  compile.sh  compile_flags.txt  png.c  png_validate.py  pyproject.toml  random_png.py
programming_exercises/: c_exercises.md  c_exercises.tex
programming_exercises/linkedlists/: Makefile  slide_setup.tex  slides_1.html  (+1 more)
(+5 files in other folders)
