[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["David Yue <davidyue5819@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pillow = "^10.3.0"
ipykernel = "^6.29.4"
scipy = "^1.13.0"
scapy = "^2.6.0"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
